feat: convert the validation to a result processor that has its own list of ConfigValidators. If the validation is not enabled, do not add the ValidationResultProcessor.