@@ -19,6 +19,9 @@ import org.github.gestalt.config.node.LeafNode;
 import org.github.gestalt.config.node.MapNode;
 import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.processor.config.ConfigNodeProcessor;
+import org.github.gestalt.config.processor.result.DefaultResultProcessor;
+import org.github.gestalt.config.processor.result.ErrorResultProcessor;
+import org.github.gestalt.config.processor.result.ResultsProcessorManager;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.reload.CoreReloadListener;
 import org.github.gestalt.config.reload.CoreReloadListenersContainer;
@@ -776,26 +779,22 @@ class GestaltTest {
         config.setTreatMissingArrayIndexAsError(false);
         config.setTreatMissingValuesAsErrors(false);
 
-        ConfigNodeManager configNodeManager = new ConfigNodeManager();
-        SentenceLexer lexer = new PathLexer(".");
-        SecretConcealer secretConcealer = new SecretConcealer(Set.of("secret"), "*****");
-
-        GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
-            List.of(MapConfigSourceBuilder.builder().setCustomConfig(configs).build(),
-                MapConfigSourceBuilder.builder().setCustomConfig(configs2).build()),
-            new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder(),
-                new ListDecoder()), configNodeManager, lexer, List.of(new StandardPathMapper())),
-            lexer, config, new ConfigNodeManager(), null, Collections.emptyList(), secretConcealer, null, null,
-            Tags.of());
+        Gestalt gestalt = new GestaltBuilder()
+            .addSource(MapConfigSourceBuilder.builder().setCustomConfig(configs).build())
+            .addSource(MapConfigSourceBuilder.builder().setCustomConfig(configs2).build())
+            .setGestaltConfig(config)
+            .useCacheDecorator(false)
+            .build();
 
         gestalt.loadConfigs();
-        List<ValidationError> errors = gestalt.getLoadErrors();
+        List<ValidationError> errors = ((GestaltCore) gestalt).getLoadErrors();
         Assertions.assertEquals(1, errors.size());
         Assertions.assertEquals("Missing array index: 2 for path: admin.user", errors.get(0).description());
 
-        config.setTreatWarningsAsErrors(true);
-        config.setTreatMissingArrayIndexAsError(true);
-        config.setTreatMissingValuesAsErrors(true);
+        GestaltConfig configUpdate = ((GestaltCore) gestalt).getGestaltConfig();
+        configUpdate.setTreatWarningsAsErrors(true);
+        configUpdate.setTreatMissingArrayIndexAsError(true);
+        configUpdate.setTreatMissingValuesAsErrors(true);
 
         var ex = Assertions.assertThrows(GestaltException.class, () -> gestalt.getConfig("admin.user[2]", Integer.class));
 
@@ -814,9 +813,9 @@ class GestaltTest {
 
 
         try {
-            config.setTreatWarningsAsErrors(false);
-            config.setTreatMissingArrayIndexAsError(false);
-            config.setTreatMissingValuesAsErrors(false);
+            configUpdate.setTreatWarningsAsErrors(false);
+            configUpdate.setTreatMissingArrayIndexAsError(false);
+            configUpdate.setTreatMissingValuesAsErrors(false);
             List<String> test = gestalt.getConfig("admin.user", new TypeCapture<>() {
             });
 
@@ -894,9 +893,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(MapConfigSourceBuilder.builder().setCustomConfig(configs).build()),
             new DecoderRegistry(Collections.singletonList(new StringDecoder()), configNodeManager, lexer,
-                List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                List.of(new StandardPathMapper())), lexer, new GestaltConfig(), new ConfigNodeManager(), null,
+            Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
 
@@ -929,9 +928,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(MapConfigSourceBuilder.builder().setCustomConfig(configs).build()),
             new DecoderRegistry(List.of(new StringDecoder(), new ExceptionDecoder()), configNodeManager, lexer,
-                List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), new ConfigNodeManager(), null, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                List.of(new StandardPathMapper())), lexer, new GestaltConfig(), new ConfigNodeManager(), null,
+            Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
 
@@ -1245,9 +1244,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(MapConfigSourceBuilder.builder().setCustomConfig(configs).build()),
             new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                configNodeManager, lexer, List.of(new StandardPathMapper())), lexer, new GestaltConfig(), configNodeManager,
+            coreReloadListenersContainer, Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
         List<ValidationError> errors = gestalt.getLoadErrors();
@@ -1343,9 +1342,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(MapConfigSourceBuilder.builder().setCustomConfig(configs).build()),
             new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                configNodeManager, lexer, List.of(new StandardPathMapper())), lexer, new GestaltConfig(),
+            configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
         List<ValidationError> errors = gestalt.getLoadErrors();
@@ -1416,9 +1415,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(sourcePackage),
             new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                configNodeManager, lexer, List.of(new StandardPathMapper())), lexer, new GestaltConfig(), configNodeManager,
+            coreReloadListenersContainer, Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
         List<ValidationError> errors = gestalt.getLoadErrors();
@@ -1481,9 +1480,9 @@ class GestaltTest {
         GestaltCore gestalt = new GestaltCore(configLoaderRegistry,
             List.of(source),
             new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(), new StringDecoder()),
-                configNodeManager, lexer, List.of(new StandardPathMapper())),
-            lexer, new GestaltConfig(), configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer,
-            null, null, Tags.of());
+                configNodeManager, lexer, List.of(new StandardPathMapper())), lexer, new GestaltConfig(),
+            configNodeManager, coreReloadListenersContainer, Collections.emptyList(), secretConcealer, null,
+            new ResultsProcessorManager(List.of(new ErrorResultProcessor(), new DefaultResultProcessor())), Tags.of());
 
         gestalt.loadConfigs();
         List<ValidationError> errors = gestalt.getLoadErrors();
